Modules and functions imported

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,10 @@
-.vscode/**
-.vscode-test/**
-test/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/jsconfig.json
-**/*.map
-**/.eslintrc.json
+**/*.ts
+**/tsconfig.json
+!file.ts
+**/*.zip
+*.gitignore
+*.py
+*.vsix
+**/examples/*
+**/.vscode/*
+**/tmp/**
